Fix overflow issue

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -20,6 +20,6 @@ html,
 body {
     box-sizing: border-box;
     overflow-x: hidden !important;
-    overflow-y: auto;
+    overflow-y: hidden !important;
     font-family: "Roboto", "sans-serif", Courier, monospace;
 }
